--- a/documents/rapport/rapport/annexe/usage.tex
+++ b/documents/rapport/rapport/annexe/usage.tex
@@ -1,4 +1,5 @@
 \section*{Usage}
+\label{annexe:usage}
 
 \begin{center}
 \lstset{language=sh}
@@ -9,13 +10,14 @@
 option:
 	 -h  --help         show this page.
  	     --fullscreen   start program in fullscreen.
+ 	     --use-vsync    start program with vsync.
  	
 <NOISE> --<noise-option>=<value>
 Order of option does not matter.
 
 Common options                     Default value
-	 --width=Int                     800
-	 --height=Int                    800
+	 --width=Int                     1024
+	 --height=Int                    1024
 	 --max_height=Float              10.0
 
 SIMPLEX
