--- a/documents/rapport/rapport/definitions.tex
+++ b/documents/rapport/rapport/definitions.tex
@@ -3,9 +3,11 @@
     
     %TODO
     
-    \paragraph{Maillage}
-    \paragraph{Carte de hauteur}
-    \paragraph{CDLOD}
-    \paragraph{Quadtree}
-    \paragraph{Texel}
-    \paragraph{Interpolation}
+    \paragraph{Maillage} Le maillage est la représentation d'un modèle sous forme d'un ensemble de sommets relié par des arrêtes de manières à former des triangles ou des carrée. Dans ce projet, le maillage est uniquement formé à partir de triangle.
+    
+    \paragraph{Carte de hauteur} La carte de hauteur ou Heightmap est une représentation sur une image en deux dimension d'une troisième dimension définie comme l'altitude. 
+    
+    \paragraph{CDLOD} Continuous Distance-Dependent Level of Detail
+    \paragraph{Quadtree} Un Quadtree ou arbre quaternaire est une structure de données représentant un arbre avec quatre fils.
+    \paragraph{Texel} Un texel est une unité d'une texture, il est l'homologue du pixel sur une image.
+    %\paragraph{Interpolation}
