--- a/documents/rapport/rapport/tests.tex
+++ b/documents/rapport/rapport/tests.tex
@@ -2,7 +2,7 @@
 
 Tests effectués sur le projet: tests unitaires sur la partie génération
 de la géométrie de la planète ainsi qu'analyse du code existant à l'aide
-d'outils externes.
+d'outils externes. 
 
 \section{Tests Unitaires}
 
@@ -48,7 +48,7 @@ ceci:
 
 \subsubsection{Triangulator}
 
-\paragraphe{SplitHeuristic}
+\paragraph{SplitHeuristic}
 
 La fonction SplitHeuristic est à la base de la génération du maillage de
 la planète. Elle sert à déterminer si un triangle est visible ou non
@@ -72,29 +72,35 @@ La mise en place du test a permis de se rendre compte d'un bug dans
 l'implémentation de la fonction. \textbf{Explications Hugo sur
 split/splitcull}.
 
-\paragraphe{RecursiveTriangle}\label{recursivetriangle}
+\paragraph{RecursiveTriangle}\label{recursivetriangle}
 
 RecursiveTriangle prend en entrée un triangle, un niveau de détail et
 une option pour activer le culling par pyramide de vision de la caméra.
 Elle enregistre dans un tableau de la classe l'ensemble des triangles
-créés récursivement. Cette fonction parcourt le \emph{quadtree}.
+créés récursivement. Cette fonction parcourt le \emph{quadtree}. Le test
+doit d'assurer que la fonction ne découpe pas le triangle en trop de
+sous triangles.
 
 Fonctionnement: Ce test crée deux cas, un où le triangle doit être coupé
 et un où le triangle ne doit pas être coupé et vérifie que le nombre de
-triangles est bien celui attendu.
+triangles est bien celui attendu. Le nombre de triangles est défini à
+l'avance, en déterminant le nombre de récursions prévues par le test.
 
-\paragraphe{Triangulator::GenerateGeometry}\label{triangulatorgenerategeometry}
 
-A écrire
+%\paragraph{Triangulator::GenerateGeometry}\label{triangulatorgenerategeometry}
 
-\paragraphe{TextRenderer::UpdateBuffer}\label{textrendererupdatebuffer}
+%A écrire
+
+\paragraph{TextRenderer::UpdateBuffer}\label{textrendererupdatebuffer}
 
 \texttt{UpdateBuffer} prend des entrées via la fonction
 \texttt{DrawText}, sous la forme d'un tableau de chaînes de caractère à
 écrire et de leurs positions sur l'écran. La fonction passe ses
 résultats à OpenGl via la fonction \texttt{glBufferData}. Le tableau de
 données envoyé à OpenGl contient des points correspondant au coin
-supérieur gauche de chaque lettre à afficher.
+supérieur gauche de chaque lettre à afficher. Le test doit s'assurer
+qu'il y a autant de points que de lettres, et que les positions des
+points respectent la police d'écriture.
 
 Fonctionnement: Le test est mis en place via "mocking" de la fonction
 \texttt{glBufferData}, en la redirigeant vers une fonction de test qui vérifie le
@@ -102,9 +108,9 @@ contenu du tableau pour donner le résultat du test. Le test écrit du
 texte à une position connue, et vérifie que les points créés sont bien
 placés.
 
-\paragraphe{Patch::GenerateGeometry}\label{patchgenerategeometry}
+%\paragraph{Patch::GenerateGeometry}\label{patchgenerategeometry}
 
-A écrire
+%A écrire
 
 \newpage
 \section{Analyse statique}\label{sec:sanal}
@@ -338,3 +344,10 @@ projet, en incluant les en-têtes de cette bibliothèque. Le standard du
 C++ recommande cependant d'utiliser les versions C++ de ces en-têtes,
 qui préfixent les noms de fichiers avec un `c' afin de les marquer comme
 appartenant au standard C.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=10cm]{img/noise-perf_i7-4700HQ.png}
+    \caption{Test de performance, processeur Intel® core i7-4700HQ}
+    \label{fig:bench}
+\end{figure}
